--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@ html {
 
 body {
   margin: 0;
-  font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
-  color: #444;
-  background: #022c43;
-  overflow: hidden;
-  display: block;
+  font: 300 11px/1.4 'Helvetica Neue', sans-serif;
+  color: #696773;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #0a0908;
+  overflow: hidden;
+  display: block;
 }
